app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 */

/* Global */

body {
  background-color: SaddleBrown;
  color: white;
  font-family: helvetica, verdana, arial, sans-serif;
  min-width: 800px;
}

.info {
  float: left;
  width: 70%;
  background-color: BurlyWood;
  color: Black;
  padding-top: 1px;
  padding-bottom: 1px;
  padding-right: 15px;
  padding-left: 15px;
  border-radius: 25px;
}

.info-extra-bottom {
  float: left;
  width: 70%;
  background-color: BurlyWood;
  color: Black;
  padding-top: 1px;
  padding-bottom: 20px;
  padding-right: 15px;
  padding-left: 15px;
  border-radius: 25px;
}

.question-mark-icon {
  content: url("/assets/question-mark-icon.jpg");
  vertical-align: text-top;
  width: 17px;
  height: 17px;
}

.alert {
  margin-top: 15px;
}

/* Main Menu */

.main-menu {
  text-align: center;
  margin: 5px auto 5px auto;
  min-width: 800px;
  width: 100%;
  height: 40px;
  background-color: Black;
}

.main-menu ul {
  width: 80%;
  min-width: 800px;
  margin: 0 auto 0 auto;
}

.main-menu ul li {
  float: left;
  color: White;
  padding: 0 20px 0 20px;
  border-right: 3px solid SaddleBrown;
  border-left: 3px solid SaddleBrown;
  height: 40px;
  list-style: none;
  display: block;
  line-height: 35px;
  text-align: center;
  cusor: pointer;
  font-weight: bold;
}

.main-menu .main-menu-leftmost {
  border-left: 6px solid SaddleBrown;
}

.main-menu .main-menu-rightmost {
  border-right: 6px solid SaddleBrown;
}

.main-menu ul li:hover {
  background-color: BurlyWood;
  color: Black;
}

.main-menu ul li a {
  text-decoration: none;
}

.main-menu ul li a:visited {
  color: White;
}

.main-menu ul a:visited li:hover {
  color: Black;
}

/* Default for links */
a {
  color: Sienna;
  text-decoration: none;
}

